DT-74: Pass group too on create and get assignable groups