@@ -6,11 +6,15 @@ import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import uk.gov.justice.digital.hmpps.oauth2server.auth.model.Group;
 import uk.gov.justice.digital.hmpps.oauth2server.auth.model.Person;
 import uk.gov.justice.digital.hmpps.oauth2server.auth.model.UserEmail;
+import uk.gov.justice.digital.hmpps.oauth2server.maintain.AuthUserGroupService;
 import uk.gov.justice.digital.hmpps.oauth2server.maintain.AuthUserService;
 import uk.gov.justice.digital.hmpps.oauth2server.maintain.AuthUserService.AmendUserException;
 import uk.gov.justice.digital.hmpps.oauth2server.maintain.AuthUserService.CreateUserException;
+import uk.gov.justice.digital.hmpps.oauth2server.model.AuthUserGroup;
 import uk.gov.justice.digital.hmpps.oauth2server.model.ErrorDetail;
 import uk.gov.justice.digital.hmpps.oauth2server.resource.api.AuthUserController.AmendUser;
 import uk.gov.justice.digital.hmpps.oauth2server.resource.api.AuthUserController.AuthUser;
@@ -22,10 +26,9 @@ import uk.gov.service.notify.NotificationClientException;
 
 import javax.persistence.EntityNotFoundException;
 import javax.servlet.http.HttpServletRequest;
-import java.security.Principal;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -38,15 +41,17 @@ public class AuthUserControllerTest {
     @Mock
     private AuthUserService authUserService;
     @Mock
+    private AuthUserGroupService authUserGroupService;
+    @Mock
     private HttpServletRequest request;
 
     private AuthUserController authUserController;
 
-    private final Principal principal = new UsernamePasswordAuthenticationToken("bob", "pass");
+    private final Authentication authentication = new UsernamePasswordAuthenticationToken("bob", "pass");
 
     @Before
     public void setUp() {
-        authUserController = new AuthUserController(userService, authUserService, false);
+        authUserController = new AuthUserController(userService, authUserService, authUserGroupService, false);
     }
 
     @Test
@@ -61,7 +66,7 @@ public class AuthUserControllerTest {
         when(userService.getAuthUserByUsername(anyString())).thenReturn(Optional.of(getAuthUser()));
         final var responseEntity = authUserController.user("joe");
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(200);
-        assertThat(responseEntity.getBody()).isEqualTo(new AuthUser("principal", "email", "Joe", "Bloggs", false, true, true));
+        assertThat(responseEntity.getBody()).isEqualTo(new AuthUser("authentication", "email", "Joe", "Bloggs", false, true, true));
     }
 
     @Test
@@ -69,12 +74,12 @@ public class AuthUserControllerTest {
         when(userService.findAuthUsersByEmail(anyString())).thenReturn(List.of(getAuthUser()));
         final var responseEntity = authUserController.searchForUser("joe");
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(200);
-        assertThat(responseEntity.getBody()).isEqualTo(List.of(new AuthUser("principal", "email", "Joe", "Bloggs", false, true, true)));
+        assertThat(responseEntity.getBody()).isEqualTo(List.of(new AuthUser("authentication", "email", "Joe", "Bloggs", false, true, true)));
     }
 
     @Test
     public void search_noResults() {
-        when(userService.findAuthUsersByEmail(anyString())).thenReturn(Collections.emptyList());
+        when(userService.findAuthUsersByEmail(anyString())).thenReturn(List.of());
         final var responseEntity = authUserController.searchForUser("joe");
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(204);
         assertThat(responseEntity.getBody()).isNull();
@@ -82,8 +87,8 @@ public class AuthUserControllerTest {
 
     @Test
     public void createUser_AlreadyExists() throws NotificationClientException {
-        when(userService.findUser(anyString())).thenReturn(Optional.of(new UserDetailsImpl("name", "bob", Collections.emptySet(), null)));
-        final var responseEntity = authUserController.createUser("user", new CreateUser("email", "first", "last", Collections.emptySet()), request, principal);
+        when(userService.findUser(anyString())).thenReturn(Optional.of(new UserDetailsImpl("name", "bob", Set.of(), null)));
+        final var responseEntity = authUserController.createUser("user", new CreateUser("email", "first", "last", null), request, authentication);
 
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(409);
         assertThat(responseEntity.getBody()).isEqualTo(new ErrorDetail("username.exists", "Username user already exists", "username"));
@@ -92,7 +97,7 @@ public class AuthUserControllerTest {
     @Test
     public void createUser_BlankDoesntCallUserService() throws NotificationClientException {
         when(request.getRequestURL()).thenReturn(new StringBuffer("http://some.url/auth/api/authuser/newusername"));
-        final var responseEntity = authUserController.createUser("  ", new CreateUser("email", "first", "last", Collections.emptySet()), request, principal);
+        final var responseEntity = authUserController.createUser("  ", new CreateUser("email", "first", "last", null), request, authentication);
 
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(204);
         verify(userService, never()).findUser(anyString());
@@ -101,7 +106,7 @@ public class AuthUserControllerTest {
     @Test
     public void createUser_Success() throws NotificationClientException {
         when(request.getRequestURL()).thenReturn(new StringBuffer("http://some.url/auth/api/authuser/newusername"));
-        final var responseEntity = authUserController.createUser("newusername", new CreateUser("email", "first", "last", Collections.emptySet()), request, principal);
+        final var responseEntity = authUserController.createUser("newusername", new CreateUser("email", "first", "last", null), request, authentication);
 
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(204);
         assertThat(responseEntity.getBody()).isNull();
@@ -110,17 +115,17 @@ public class AuthUserControllerTest {
     @Test
     public void createUser_trim() throws NotificationClientException, CreateUserException, VerifyEmailException {
         when(request.getRequestURL()).thenReturn(new StringBuffer("http://some.url/auth/api/authuser/newusername"));
-        authUserController.createUser("   newusername   ", new CreateUser("email", "first", "last", Collections.emptySet()), request, principal);
+        authUserController.createUser("   newusername   ", new CreateUser("email", "first", "last", null), request, authentication);
 
         verify(userService).findUser("newusername");
-        verify(authUserService).createUser("newusername", "email", "first", "last", Collections.emptySet(), "http://some.url/auth/initial-password?token=", "bob");
+        verify(authUserService).createUser("newusername", "email", "first", "last", null, "http://some.url/auth/initial-password?token=", "bob", authentication.getAuthorities());
     }
 
     @Test
     public void createUser_CreateUserError() throws NotificationClientException, CreateUserException, VerifyEmailException {
         when(request.getRequestURL()).thenReturn(new StringBuffer("http://some.url/auth/api/authuser/newusername"));
-        when(authUserService.createUser(anyString(), anyString(), anyString(), anyString(), anySet(), anyString(), anyString())).thenThrow(new CreateUserException("username", "errorcode"));
-        final var responseEntity = authUserController.createUser("newusername", new CreateUser("email", "first", "last", Collections.emptySet()), request, principal);
+        when(authUserService.createUser(anyString(), anyString(), anyString(), anyString(), isNull(), anyString(), anyString(), any())).thenThrow(new CreateUserException("username", "errorcode"));
+        final var responseEntity = authUserController.createUser("newusername", new CreateUser("email", "first", "last", null), request, authentication);
 
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(400);
         assertThat(responseEntity.getBody()).isEqualTo(new ErrorDetail("username.errorcode", "username failed validation", "username"));
@@ -129,8 +134,8 @@ public class AuthUserControllerTest {
     @Test
     public void createUser_VerifyUserError() throws NotificationClientException, CreateUserException, VerifyEmailException {
         when(request.getRequestURL()).thenReturn(new StringBuffer("http://some.url/auth/api/authuser/newusername"));
-        when(authUserService.createUser(anyString(), anyString(), anyString(), anyString(), anySet(), anyString(), anyString())).thenThrow(new VerifyEmailException("reason"));
-        final var responseEntity = authUserController.createUser("newusername", new CreateUser("email", "first", "last", Collections.emptySet()), request, principal);
+        when(authUserService.createUser(anyString(), anyString(), anyString(), anyString(), isNull(), anyString(), anyString(), any())).thenThrow(new VerifyEmailException("reason"));
+        final var responseEntity = authUserController.createUser("newusername", new CreateUser("email", "first", "last", null), request, authentication);
 
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(400);
         assertThat(responseEntity.getBody()).isEqualTo(new ErrorDetail("email.reason", "Email address failed validation", "email"));
@@ -139,26 +144,25 @@ public class AuthUserControllerTest {
     @Test
     public void createUser_InitialPasswordUrl() throws NotificationClientException, CreateUserException, VerifyEmailException {
         when(request.getRequestURL()).thenReturn(new StringBuffer("http://some.url/auth/api/authuser/newusername"));
-        final var roles = Collections.<String>emptySet();
 
-        authUserController.createUser("newusername", new CreateUser("email", "first", "last", roles), request, principal);
+        authUserController.createUser("newusername", new CreateUser("email", "first", "last", null), request, authentication);
 
-        verify(authUserService).createUser("newusername", "email", "first", "last", roles, "http://some.url/auth/initial-password?token=", "bob");
+        verify(authUserService).createUser("newusername", "email", "first", "last", null, "http://some.url/auth/initial-password?token=", "bob", authentication.getAuthorities());
     }
 
     @Test
     public void createUser_NoAdditionalRoles() throws NotificationClientException, CreateUserException, VerifyEmailException {
         when(request.getRequestURL()).thenReturn(new StringBuffer("http://some.url/auth/api/authuser/newusername"));
 
-        authUserController.createUser("newusername", new CreateUser("email", "first", "last", null), request, principal);
+        authUserController.createUser("newusername", new CreateUser("email", "first", "last", null), request, authentication);
 
-        verify(authUserService).createUser("newusername", "email", "first", "last", Collections.emptySet(), "http://some.url/auth/initial-password?token=", "bob");
+        verify(authUserService).createUser("newusername", "email", "first", "last", null, "http://some.url/auth/initial-password?token=", "bob", authentication.getAuthorities());
     }
 
     @Test
     public void createUser() throws NotificationClientException {
         when(request.getRequestURL()).thenReturn(new StringBuffer("http://some.url/api/authuser/newusername"));
-        final var responseEntity = authUserController.createUser("newusername", new CreateUser("email", "first", "last", Collections.emptySet()), request, principal);
+        final var responseEntity = authUserController.createUser("newusername", new CreateUser("email", "first", "last", null), request, authentication);
 
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(204);
         assertThat(responseEntity.getBody()).isNull();
@@ -166,7 +170,7 @@ public class AuthUserControllerTest {
 
     @Test
     public void enableUser() {
-        final var responseEntity = authUserController.enableUser("user", principal);
+        final var responseEntity = authUserController.enableUser("user", authentication);
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(204);
         verify(userService).enableUser("user", "bob");
     }
@@ -174,13 +178,13 @@ public class AuthUserControllerTest {
     @Test
     public void enableUser_notFound() {
         doThrow(new EntityNotFoundException("message")).when(userService).enableUser(anyString(), anyString());
-        final var responseEntity = authUserController.enableUser("user", principal);
+        final var responseEntity = authUserController.enableUser("user", authentication);
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(404);
     }
 
     @Test
     public void disableUser() {
-        final var responseEntity = authUserController.disableUser("user", principal);
+        final var responseEntity = authUserController.disableUser("user", authentication);
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(204);
         verify(userService).disableUser("user", "bob");
     }
@@ -188,7 +192,7 @@ public class AuthUserControllerTest {
     @Test
     public void disableUser_notFound() {
         doThrow(new EntityNotFoundException("message")).when(userService).disableUser(anyString(), anyString());
-        final var responseEntity = authUserController.disableUser("user", principal);
+        final var responseEntity = authUserController.disableUser("user", authentication);
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(404);
     }
 
@@ -196,16 +200,16 @@ public class AuthUserControllerTest {
     public void amendUser_checkService() throws NotificationClientException, VerifyEmailException, AmendUserException {
         when(request.getRequestURL()).thenReturn(new StringBuffer("http://some.url/auth/api/authuser/newusername"));
 
-        final var responseEntity = authUserController.amendUser("user", new AmendUser("a@b.com"), request, principal);
+        authUserController.amendUser("user", new AmendUser("a@b.com"), request, authentication);
 
         verify(authUserService).amendUser("user", "a@b.com", "http://some.url/auth/initial-password?token=", "bob");
     }
 
     @Test
-    public void amendUser_statusCode() throws NotificationClientException, VerifyEmailException, AmendUserException {
+    public void amendUser_statusCode() throws NotificationClientException {
         when(request.getRequestURL()).thenReturn(new StringBuffer("http://some.url/auth/api/authuser/newusername"));
 
-        final var responseEntity = authUserController.amendUser("user", new AmendUser("a@b.com"), request, principal);
+        final var responseEntity = authUserController.amendUser("user", new AmendUser("a@b.com"), request, authentication);
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(204);
         assertThat(responseEntity.getBody()).isNull();
     }
@@ -215,7 +219,7 @@ public class AuthUserControllerTest {
         when(request.getRequestURL()).thenReturn(new StringBuffer("http://some.url/auth/api/authuser/newusername"));
         when(authUserService.amendUser(anyString(), anyString(), anyString(), anyString())).thenThrow(new EntityNotFoundException("not found"));
 
-        final var responseEntity = authUserController.amendUser("user", new AmendUser("a@b.com"), request, principal);
+        final var responseEntity = authUserController.amendUser("user", new AmendUser("a@b.com"), request, authentication);
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(404);
     }
 
@@ -224,7 +228,7 @@ public class AuthUserControllerTest {
         when(request.getRequestURL()).thenReturn(new StringBuffer("http://some.url/auth/api/authuser/newusername"));
         when(authUserService.amendUser(anyString(), anyString(), anyString(), anyString())).thenThrow(new AmendUserException("fiel", "cod"));
 
-        final var responseEntity = authUserController.amendUser("user", new AmendUser("a@b.com"), request, principal);
+        final var responseEntity = authUserController.amendUser("user", new AmendUser("a@b.com"), request, authentication);
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(400);
         assertThat(responseEntity.getBody()).isEqualTo(new ErrorDetail("fiel.cod", "fiel failed validation", "fiel"));
     }
@@ -234,13 +238,22 @@ public class AuthUserControllerTest {
         when(request.getRequestURL()).thenReturn(new StringBuffer("http://some.url/auth/api/authuser/newusername"));
         when(authUserService.amendUser(anyString(), anyString(), anyString(), anyString())).thenThrow(new VerifyEmailException("reason"));
 
-        final var responseEntity = authUserController.amendUser("user", new AmendUser("a@b.com"), request, principal);
+        final var responseEntity = authUserController.amendUser("user", new AmendUser("a@b.com"), request, authentication);
         assertThat(responseEntity.getStatusCodeValue()).isEqualTo(400);
         assertThat(responseEntity.getBody()).isEqualTo(new ErrorDetail("email.reason", "Email address failed validation", "email"));
     }
 
+    @Test
+    public void assignableGroups_success() {
+        final var group1 = new Group("FRED", "desc");
+        final var group2 = new Group("GLOBAL_SEARCH", "desc2");
+        when(authUserGroupService.getAssignableGroups(anyString(), any())).thenReturn(Set.of(group1, group2));
+        final var responseEntity = authUserController.assignableGroups(authentication);
+        assertThat(responseEntity).containsOnly(new AuthUserGroup(group1), new AuthUserGroup(group2));
+    }
+
     private UserEmail getAuthUser() {
-        final var user = new UserEmail("principal", "email", true, false);
+        final var user = new UserEmail("authentication", "email", true, false);
         user.setPerson(new Person());
         user.getPerson().setFirstName("Joe");
         user.getPerson().setLastName("Bloggs");
